--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         <p>Si tienes alguna pregunta o deseas más información sobre nuestros servicios, no dudes en contactarnos. Estamos aquí para ayudarte a mantener tu calzado en perfecto estado.</p>
         <div class="redes">
             <a href="https://www.instagram.com/revivemykicks_/"><img src="img/instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/revivemykicks/"><img src="img/facebook.png" alt="Facebook"></a>
-            <a href="tel:+523141034991"><img src="img/whatsapp.png" alt="whatsapp"> </a>
+            <a href="https://wa.me/523141034991"><img src="img/whatsapp.png" alt="whatsapp"> </a>
         </div>
     </div>
     
