--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p>Si tienes alguna pregunta o deseas más información sobre nuestros servicios, no dudes en contactarnos. Estamos aquí para ayudarte a mantener tu calzado en perfecto estado.</p>
         <div class="redes">
             <a href="https://www.instagram.com/revivemykicks_/"><img src="img/instagram.png" alt="Instagram"></a>
-            <a href="https://wa.me/523141034991"><img src="img/whatsapp.png" alt="whatsapp"> </a>
+            <a href="https://wa.me/523141034991?text=Hola%2C%20me%20interesa%20agendar%20un%20servicio%20de%20limpieza.%20%C2%BFMe%20puedes%20dar%20m%C3%A1s%20informaci%C3%B3n%3F"><img src="img/whatsapp.png" alt="whatsapp"> </a>
         </div>
     </div>
     
