--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="navigation">
         <nav>
-            <a href="landing.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#services">Precios y Servicios</a>
             <a href="#faq">Preguntas Frecuentes</a>
             <a href="#contact">Contacto</a>
