fix servicio a domicilio y visual

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3>Limpieza Basica <strong>$120</strong></h3>
             <p>Exterior, Midsole, Agujetas, Desodorante</p>
             <h3>Limpieza Premium <strong>$150</strong></h3>
-            <p>Exterior, Interior, Midsole, Suela, Agujetas, Desodorante</p>
+            <p>Exterior, Interior, Midsole, Suela, Agujetas, Desodorante</p><br
             <h5>Entregas 2-3 dias habiles</h5>
         </div>
         <div class="extras">
@@ -44,7 +44,8 @@
             <h3>Servicio Express (dia siguiente) <strong>$50</strong></h3>
             <h3>Blanqueamiento de Midsole <strong>$60</strong></h3>
             <h3>Repelente Agua y Polvo <strong>$50</strong></h3>
-            <h3>Servicio a Domicilio <strong>$50</strong></h3>
+            <h3>Servicio a Domicilio <strong>$</strong></h3>
+            <p>Dependiendo de la zona</p><br
             <h5>Los extras se cobran por par, excepto servicio a domicilio</h5>
         </div>
     </div>
@@ -79,7 +80,7 @@
     </div>
     
     <div class="footer fade-in-scroll">
-        <p>© 2025 Revive My Kicks.</p>
+        <p>© 2025 Revive My Kicks. Manzanillo, Colima</p>
     </div>
 <script src="app.js"></script>
 </body>
