cierre de etiqueta faltante

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h3>Blanqueamiento de Midsole <strong>$60</strong></h3>
             <h3>Repelente Agua y Polvo <strong>$50</strong></h3>
             <h3>Servicio a Domicilio <strong>$</strong></h3>
-            <p>Dependiendo de la zona</p><br
+            <p>Dependiendo de la zona</p><br>
             <h5>Los extras se cobran por par, excepto servicio a domicilio</h5>
         </div>
     </div>
