--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/jpeg" href="img/logo.jpg">
 </head>
-<header>
+
+<body>
+    <header>
     <div class="logo">
         <img src="img/logo.jpg" alt="logo de Revive My Kicks">
     </div>
@@ -20,7 +22,6 @@
         </nav>
     </div> 
 </header>
-<body>
     <div class="hero fade-in-scroll">
         <div class="left">
             <h1>Revive My Kicks</h1>
@@ -76,6 +77,11 @@
             <a href="https://www.instagram.com/revivemykicks_/"><img src="img/instagram.png" alt="Instagram"></a>
             <a href="https://www.facebook.com/share/162HixJdhx/?mibextid=wwXIfr/"><img src="img/facebook.png" alt="Facebook"></a>
             <a href="https://wa.me/523141034991?text=Hola%2C%20me%20interesa%20agendar%20un%20servicio%20de%20limpieza.%20%C2%BFMe%20puedes%20dar%20m%C3%A1s%20informaci%C3%B3n%3F"><img src="img/whatsapp.png" alt="whatsapp"> </a>
+        </div>
+        <div class="map">
+            <h1>¿D&oacute;nde nos ubicamos?</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2447.383728484401!2d-104.31472095348683!3d19.119283808678315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTnCsDA3JzEwLjIiTiAxMDTCsDE4JzQ2LjAiVw!5e0!3m2!1ses-419!2smx!4v1755462019379!5m2!1ses-419!2smx" 
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     
